# formacao-python-backend-developer-dio

./: .gitignore  README.md  pyproject.toml  requirements.txt
desenvolvimento_apis_flask/: .gitignore  comandos.md  diobank.db
desenvolvimento_apis_flask/migrations/versions/: 47760632ab28_criação_inicial.py
desenvolvimento_apis_flask/olds/: app_teste.py  hello.py
desenvolvimento_apis_flask/src/: app.py  schema.sql
desenvolvimento_apis_flask/src/controllers/: auth.py  post.py  role.py  user.py
olds/: blog.db  db.py  schema.sql
src/: app.py  utils.py
